--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
             "name": "YangBo Cai",
             "email": "18216575@qq.com",
             "homepage":"http://blog.djmsm.com/",
-            "role":"project engineer",
+            "role":"engineer"
         },
         {
             "name": "Jordi Boggiano",
